crates/aranya-policy-compiler/tests/data/type_errors/invalid_binary_op_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     return 3 || 4
  |            ^^^^^^ expected `bool` but found `int`
